[SEDONA-249] Add jvm flags for running tests on Java 17 (#772)